--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<script src="https://whitphx.github.io/stlite/lib/application/stlite.js" ></script>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>stlite app</title>
+</head>
+<body>
+  <div id="root"></div>
+  <script src="https://cdn.jsdelivr.net/npm/@stlite/mountable@0.1.0/build/stlite.js"></script>
+  <!-- 👆👆👆 New URL! 👆👆👆 -->
   <script>
-    stlite.mount({
-      mainScriptData: `
+    stlite.mount(`
 import streamlit as st
 
-name = st.text_input("Name")
-st.write("Hello, ", name or "world")
-`
-    })
+name = st.text_input('Your name')
+st.write("Hello,", name or "world")
+`,
+    document.getElementById("root"))
   </script>
+</body>
+</html>
