--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ import streamlit as st
 
 name = st.text_input('Your name')
 st.write("Hello,", name or "world")
+st.write("Teting the changes in the file")
 `,
     document.getElementById("root"))
   </script>
